manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-server-ingress
  namespace: ci
  annotations:
    kubernetes.io/ingress.class: "nginx"  # lub inny, w zależności od używanego Ingress Controller
spec:
  rules:
    - host: jenkins.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
